# caelus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  caelus.db.no  dev  docker-compose.yml  e2e_hello3.sh  entrypoint.sh  pyproject.toml
api/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 05b670774a19_rename_domainname_to_hostname.py  0db0c317d954_add_rel_icon_path_to_product.py  0f2f16f17a91_template_version_v2_fields.py  10fb17efd947_init.py  3c6f4e851d22_deployment_v2_fields_and_user_admin.py  5a86ca9171f3_fix_partial_unique_indexes.py  7b6bcc66b915_init.py  7c0e2a3ce007_normalize_hostnames_to_lowercase.py  7f754e435ae2_init.py  9b4e729fd792_deployment_deletion.py  a1b2c3d4e5f6_rename_default_to_system_values.py  a1b2c3d4e5f7_add_mollie_payment_integration.py  add_unique_constraints_20240210.py  b2c3d4e5f6a7_split_deployment_identity.py  b4a8f1c2d3e5_lowercase_hostnames.py  c3d4e5f6a7b8_add_pricing_and_billing.py  d4e5f6a7b8c9_storage_bytes_bigint.py  e5f6a7b8c9d0_move_description_to_plan_template.py  f6a7b8c9d0e1_add_mollie_payment_integration.py  f6a7b8c9d0e1_deployment_id_to_uuid.py
api/app/: cli.py  config.py  db.py  deps.py  logging_config.py  main.py  models.py  proc.py  provisioner.py  util.py  worker.py
api/app/api/: deployments.py  hostnames.py  plans.py  products.py  subscriptions.py  users.py  util.py  utils.py  webhooks.py
api/app/models/: __init__.py  billing.py  core.py
api/app/services/: deployments.py  errors.py  helm_adapter.py  hostnames.py  images.py  jobs.py  kube_adapter.py  mollie.py  plans.py  products.py  reconcile.py  reconcile_constants.py  reconcile_naming.py  (+4 more)
api/tests/: conftest.py  provisioner_utils.py  test_api.py  test_authorization.py  test_cascade_delete.py  test_cli.py  test_config.py  test_deployment_delete.py  test_deployment_queue.py  test_deployments.py  test_hostnames.py  test_jobs_service.py  test_jobs_service_postgres.py  test_migration_deployment_v2.py  test_models_constraints.py  test_models_v2.py  test_mollie_integration.py  test_plan_and_subscription_api.py  test_plans_and_subscriptions.py  test_platform_adapters.py  test_product_icons.py  test_product_template_delete.py  test_product_update.py  test_reconcile_contracts.py  test_reconcile_service.py  test_template_values.py  test_util.py
(+443 files in other folders)
