[project]
name = "caelus"
version = "0.1.0"
description = "Cloud provisioning tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110",
  "sqlmodel>=0.0.21",
  "uvicorn[standard]>=0.27",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "httpx>=0.27,<0.28",
  "pytest>=8.0",
]

[project.scripts]
caelus = "app.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
