[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caelus"
version = "0.1.0"
description = "Cloud provisioning tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110",
  "sqlmodel>=0.0.21",
  "uvicorn[standard]>=0.27",
  "alembic>=1.13",
  "jsonschema>=4.0",
  "psycopg[binary]>=3.1",
  "asyncpg>=0.29",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "typer[all]>=0.21.1",
  "Pillow>=10.0",
  "python-multipart>=0.0.6",
  "mollie-api-py>=1.2.3",
  "python-dateutil>=2.9.0.post0",
]

[tool.setuptools]
packages = { find = { "exclude" = ["alembic*"] } }


[project.scripts]
caelus = "app.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "mypy>=1.19.1",
]
